Fixed sidenav being overlapped by toolbar

--- a/src/app/modules/core/components/app/app.component.css
+++ b/src/app/modules/core/components/app/app.component.css
@@ -5,3 +5,7 @@
   height: 100vh;
   width: 100vw;
 }
+
+div {
+  position: relative;
+}
